# LearnOpenCL

./: CMakeLists.txt  README.md
include/LearnOpenCL/: device_info.h
src/: device_info.cpp  main.cpp
